# mklang

./: .env.example  .gitattributes  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SPEC.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  demo-assets-pr.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  demo-assets.yml  docs.yml  quality.yml  release.yml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
ROADMAP/: index.html
SPEC/: index.html
adr/: index.html
adr/0001-capability-tiers/: index.html
adr/0002-fanout-llm-reducer/: index.html
adr/0003-provider-agnostic/: index.html
adr/0004-llm-as-runtime-gates/: index.html
adr/0005-reasoning-first-class/: index.html
adr/0006-code-hook-gates/: index.html
adr/0007-resumable-checkpoints/: index.html
adr/0008-hitl-escalate-suspend/: index.html
adr/0009-conformance-suite/: index.html
adr/0010-llm-assisted-lint/: index.html
adr/0011-mcp-server-surface/: index.html
adr/0012-machine-stdlib/: index.html
adr/0013-mcp-surface-completion/: index.html
adr/0014-structured-list-outputs/: index.html
adr/0015-console-surface/: index.html
adr/0016-host-web-search-tool/: index.html
adr/0017-context-content-management/: index.html
adr/0018-output-truncation-anti-cutoff/: index.html
adr/0019-mcp-live-events/: index.html
adr/0020-host-tool-stub-architecture/: index.html
adr/0021-filesystem-layout-local-install/: index.html
adr/0022-cli-console-experience/: index.html
adr/0023-global-local-config-separation/: index.html
adr/0024-fs-data-tools/: index.html
adr/0025-untrusted-context-delimiting/: index.html
adr/0026-stability-and-deprecation-policy/: index.html
adr/0027-adopt-mkl-extension/: index.html
adr/0028-provisional-1.0-posture/: index.html
architecture/: index.html
assets/demos/: agent.txt  language.txt  language.webm  manifest.json
authoring/: index.html
best-practices/: index.html
cheatsheet/: index.html
cli/: index.html
config/: runtime.example.yaml  runtime.schema.json
conformance/: README.md  index.html
conformance/cases/: accumulate.yaml  budget-exhausted.yaml  budget-fanout-charging.yaml  call-failed.yaml  call.yaml  cost-exhausted.yaml  escalate-routing.yaml  fail-gate.yaml  fanout-over.yaml  fanout-sample-index.yaml  hook-before-prose.yaml  hook-false-falls-through.yaml  judge-routing.yaml  judge-unparseable-fallback.yaml  judge-unparseable-halt.yaml  linear.yaml  no-gate-matched.yaml  parse-list-invalid.yaml  parse-list.yaml  raw-input-passthrough.yaml  repair-exhausted-reroutes.yaml  repair.yaml  taint-author-context-bare.yaml  taint-call-result-delimited.yaml  taint-host-input-delimited.yaml  taint-tool-observation-delimited.yaml  tool-state-output-deposit.yaml  tool-unknown-halts.yaml
console/: index.html
demos/: index.html  toolchain.conf
demos/tapes/: agent.tape  cli.tape  console.tape  hitl.tape  language.tape  orchestrate.tape  search.tape  test.tape
docs/: authoring.md  best-practices.md  console.md  demos.md  patterns.md  stdlib.md
docs/adr/: 0001-capability-tiers.md  0002-fanout-llm-reducer.md  0003-provider-agnostic.md  0004-llm-as-runtime-gates.md  0005-reasoning-first-class.md  0006-code-hook-gates.md  0007-resumable-checkpoints.md  0008-hitl-escalate-suspend.md  0009-conformance-suite.md  0010-llm-assisted-lint.md  0010-mcp-server-surface.md  0011-mcp-server-surface.md  0012-machine-stdlib.md  0013-mcp-surface-completion.md  0014-structured-list-outputs.md  0015-console-surface.md  0016-host-web-search-tool.md  0017-context-content-management.md  0018-output-truncation-anti-cutoff.md  0019-mcp-live-events.md  0020-host-tool-stub-architecture.md  0021-filesystem-layout-local-install.md  0022-cli-console-experience.md  0023-global-local-config-separation.md  0024-fs-data-tools.md  0025-untrusted-context-delimiting.md  0026-stability-and-deprecation-policy.md  0027-adopt-mkl-extension.md  0028-provisional-1.0-posture.md  README.md
docs/experiments/: authoring-blind-spot.md  authoring-corpus.yaml  distribution-five-reader.md  gate-divergence.md  validation-report-2026-07-23.md
docs/guides/: authoring.md  best-practices.md  console.md  getting-started.md  install.md  patterns.md  stability.md
docs/reference/: architecture.md  cheatsheet.md  cli.md  stdlib.md
examples/: expense_approval.mk  expense_approval.mkl  hook_gates.mk  hook_gates.mkl  map_reduce.mk  map_reduce.mkl  news_search.mk  news_search.test.yaml  react.mk  react.mkl  research.mk  research.mkl  research_compress.mk  research_compress.mkl  research_compress.test.yaml  research_web.mk  research_web.mkl  research_web.test.yaml  self_consistency.mk  self_consistency.mkl  summarize_doc.mk  summarize_doc.mkl  triage.mk  triage.mkl  triage.test.yaml
experiments/authoring-blind-spot/: index.html
getting-started/: index.html
install/: index.html
machines/: news_search.mkl
packaging/arch/: PKGBUILD  README.md
patterns/: index.html
schema/: mklang.schema.json
scripts/: authoring_blind_spot.py  build-docs.sh  demo_assets.py  gate_divergence.py  install.sh
search/: search_index.json
stability/: index.html
stdlib/: index.html
tests/: conftest.py  test_anthropic.py  test_capabilities.py  test_checkpoint.py  test_cli_presentation.py  test_conformance.py  test_console_agent.py  test_console_app.py  test_console_render.py  test_console_session.py  test_console_tools.py  test_context_view.py  test_cookbook.py  test_engine_mock.py  test_events.py  test_first_run.py  test_fs.py  test_gate_divergence_suite.py  test_golden.py  test_hardening.py  test_hitl.py  test_hooks.py  test_host.py  test_interpolate.py  test_lang03.py  test_lint.py  test_live.py  test_llmlint.py  test_loader_checks.py  test_logs.py  test_mcp.py  test_openai_compat.py  test_openai_compat_paths.py  test_paths.py  test_presentation_text.py  test_prompts.py  test_providers.py  test_registry_plugins.py  test_release.py  test_remediation_002.py  (+9 more)
(+96 files in other folders)
