[project]
name = "mklang"
version = "0.8.2"
description = "A declarative language for LLM-driven state machines (reference interpreter)."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Gianluca Mazza", email = "info@gianlucamazza.it" }]
keywords = ["llm", "state-machine", "agents", "dsl", "reasoning"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Interpreters",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pyyaml>=6",
  "jsonschema>=4",
  "python-dotenv>=1",
  "openai>=1.40",
]

[project.urls]
Homepage = "https://github.com/gianlucamazza/mklang"
Documentation = "https://gianlucamazza.github.io/mklang/"
Specification = "https://github.com/gianlucamazza/mklang/blob/main/SPEC.md"
Changelog = "https://github.com/gianlucamazza/mklang/blob/main/CHANGELOG.md"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=8", "ruff>=0.6"]
mcp = ["mcp>=1.10"]
console = ["textual>=0.80"]

[project.scripts]
mklang = "mklang.cli:main"
mklang-mcp = "mklang.mcp.server:main"

# Third parties register tools/hooks/machines without patching core:
#   [project.entry-points."mklang.tools"]
#   my_tool = "mypkg.tools:my_tool"
#   [project.entry-points."mklang.hooks"]
#   my_hook = "mypkg.hooks:my_hook"
#   [project.entry-points."mklang.machines"]      # a machine document (dict) or
#   my_machine = "mypkg.machines:my_machine"      # a zero-arg factory returning one
[project.entry-points."mklang.tools"]
calc = "mklang.tools:calc"
search = "mklang.tools:search"
search_kb = "mklang.tools:search_kb"
send_reply = "mklang.tools:send_reply"

[project.entry-points."mklang.providers"]
anthropic = "mklang.providers:anthropic"

[project.entry-points."mklang.hooks"]
always_true = "mklang.hooks:always_true"
always_false = "mklang.hooks:always_false"
amount_le_100 = "mklang.hooks:amount_le_100"
has_receipt = "mklang.hooks:has_receipt"
auto_approve_ok = "mklang.hooks:auto_approve_ok"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mklang"]

[tool.hatch.build.targets.wheel.force-include]
"src/mklang/data/mklang.schema.json" = "mklang/data/mklang.schema.json"
# data/stdlib/*.mk|*.test.yaml ride along with the package itself — hatchling
# includes non-.py files under `packages`; forcing them here would duplicate.

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
