[project]
name = "mklang"
version = "0.16.0"
description = "A declarative language for LLM-driven state machines (reference interpreter)."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Gianluca Mazza", email = "info@gianlucamazza.it" }]
keywords = ["llm", "state-machine", "agents", "dsl", "reasoning"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Interpreters",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pyyaml>=6",
  "jsonschema>=4",
  "python-dotenv>=1",
  "openai>=1.40",
  "rich>=13.7",
  "textual>=0.80",
]

[project.urls]
Homepage = "https://github.com/gianlucamazza/mklang"
Documentation = "https://gianlucamazza.github.io/mklang/"
Specification = "https://github.com/gianlucamazza/mklang/blob/main/SPEC.md"
Changelog = "https://github.com/gianlucamazza/mklang/blob/main/CHANGELOG.md"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
# The console ships by default since 0.15.0; the extra stays as a no-op so
# `pip install "mklang[console]"` from older docs keeps working.
console = []
dev = [
  "pytest>=8",
  "pytest-cov>=6",
  "ruff>=0.6",
  "mypy>=1.15",
  "types-PyYAML>=6",
  "types-jsonschema>=4",
]
mcp = ["mcp>=1.10"]
completions = ["argcomplete>=3"]

[project.scripts]
mklang = "mklang.cli:main"
mklang-mcp = "mklang.mcp.server:main"

# Third parties register tools/hooks/machines without patching core:
#   [project.entry-points."mklang.tools"]
#   my_tool = "mypkg.tools:my_tool"
#   [project.entry-points."mklang.hooks"]
#   my_hook = "mypkg.hooks:my_hook"
#   [project.entry-points."mklang.machines"]      # a machine document (dict) or
#   my_machine = "mypkg.machines:my_machine"      # a zero-arg factory returning one
[project.entry-points."mklang.tools"]
calc = "mklang.tools:calc"
search = "mklang.tools:search"
search_kb = "mklang.tools:search_kb"
send_reply = "mklang.tools:send_reply"

[project.entry-points."mklang.providers"]
anthropic = "mklang.providers:anthropic"

[project.entry-points."mklang.hooks"]
always_true = "mklang.hooks:always_true"
always_false = "mklang.hooks:always_false"
amount_le_100 = "mklang.hooks:amount_le_100"
has_receipt = "mklang.hooks:has_receipt"
auto_approve_ok = "mklang.hooks:auto_approve_ok"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
# Keep the sdist lean: the PKGBUILD builds from it and needs src/, config/,
# examples/, tests/ and the top-level metadata — not media assets or site output.
exclude = [
  "/.claude",
  "/.github",
  "/demos",
  "/dist",
  "/site",
  "/docs/assets/demos",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mklang"]

[tool.hatch.build.targets.wheel.force-include]
"src/mklang/data/mklang.schema.json" = "mklang/data/mklang.schema.json"
"config/runtime.example.yaml" = "mklang/data/runtime.example.yaml"
"config/runtime.schema.json" = "mklang/data/runtime.schema.json"
".env.example" = "mklang/data/env.example"
# data/stdlib/*.mk|*.test.yaml ride along with the package itself — hatchling
# includes non-.py files under `packages`; forcing them here would duplicate.

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["mklang"]

[tool.coverage.report]
# Ratchet up, never down: 88 at introduction (90.3% measured), 90 since the
# targeted openai_compat/presentation/registry tests (92.0% measured).
fail_under = 90
show_missing = true
skip_covered = true
exclude_also = ["if TYPE_CHECKING:"]

[tool.mypy]
files = ["src/mklang"]
python_version = "3.11"
check_untyped_defs = true
disallow_incomplete_defs = true
strict_equality = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
# Strict tier (ratchet: modules may only be ADDED here, never removed). Full
# --strict minus disallow_any_generics: bare dict/list is the codebase's JSON
# idiom (see the CI-gates plan non-goal).
module = [
  "mklang.paths",
  "mklang.lint",
  "mklang.logs",
  "mklang.tool_obs",
  "mklang.errors",
  "mklang.config",
  "mklang.toolconfig",
  "mklang.llm.base",
  "mklang.llm.prompts",
  "mklang.llm.context_view",
  "mklang.console.commands",
]
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_subclassing_any = true
warn_return_any = true
